--- a/styles.css
+++ b/styles.css
@@ -119,15 +119,11 @@
         }
         .sub-content{
             max-width: 45%;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
             .sub-content-article{
                 display: flex;
             }
             & img{
-                max-width: 200px;
-                flex-shrink: 0;
+                max-width: 150px;
                 margin-right: 20px;
                 border:solid wheat 2px;
                 padding: 10px;
@@ -163,12 +159,13 @@
 .sub-container{
     margin: 0 15%;
     display: flex;
-    flex-wrap: wrap;
     justify-content: space-between;
+    flex-wrap: wrap;
     .sub-article1{
         margin-top: 20px;
-        width: 60vh;
+        max-width: 400px;
         display: flex ;
+        flex-wrap: nowrap;
         img{
             max-width: 50%;
         }
@@ -176,11 +173,10 @@
             background-color: aqua;
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             font-weight: bolder;
-            padding: 30px;
             color: white;
+            padding: 10px;
         }
         .read-more{
-            margin-top: 20px;
             a{
                 border:solid white 2px;
                 padding: 10px;
