--- a/styles.css
+++ b/styles.css
@@ -120,10 +120,11 @@
         .sub-content{
             max-width: 45%;
             .sub-content-article{
+                padding-top: 20px;
                 display: flex;
             }
             & img{
-                max-width: 150px;
+                max-width: 140px;
                 margin-right: 20px;
                 border:solid wheat 2px;
                 padding: 10px;
