--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@
 }
 .menu{
     background-color: white;
-    margin: 0 15%;
+    padding: 0 15%;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -138,7 +138,7 @@
     }
 }
 .read-more{
-                margin-top: 20px;
+                margin:20px 0;
                 a{
                     border:solid green 2px;
                     padding: 10px;
